2022元旦更新 修复了随机尺寸的问题 加入了帮助页

--- a/BW_Mobile/BW_Mobile/BW_Mobile.csproj
+++ b/BW_Mobile/BW_Mobile/BW_Mobile.csproj
@@ -5,7 +5,7 @@
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
     <Authors>LZH</Authors>
     <Company>HomePigGroup</Company>
-    <AssemblyVersion></AssemblyVersion>
+    <AssemblyVersion>1.0.1.0</AssemblyVersion>
     <NeutralLanguage>zh-CN</NeutralLanguage>
   </PropertyGroup>
 
