--- a/BW_Mobile/BW_Mobile/BW_Mobile.csproj
+++ b/BW_Mobile/BW_Mobile/BW_Mobile.csproj
@@ -4,9 +4,11 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
     <Authors>LZH</Authors>
-    <Company>HomePigGroup</Company>
-    <AssemblyVersion>1.0.1.0</AssemblyVersion>
+    <Company></Company>
+    <AssemblyVersion>1.3.11.0</AssemblyVersion>
     <NeutralLanguage>zh-CN</NeutralLanguage>
+    <UserSecretsId>b6217d37-bd88-4de0-8e12-1e5fbc688e5a</UserSecretsId>
+    <Version>$(VersionPrefix)</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
