加入了多语言支持和English

--- a/BW_Mobile/BW_Mobile.Android/BW_Mobile.Android.csproj
+++ b/BW_Mobile/BW_Mobile.Android/BW_Mobile.Android.csproj
@@ -86,6 +86,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\values\styles.xml" />
     <AndroidResource Include="Resources\values\colors.xml" />
+    <AndroidResource Include="Resources\values\strings.xml" />
+    <AndroidResource Include="Resources\values-zh-rCN\strings.xml" />
+    <AndroidResource Include="Resources\values-en\strings.xml" />
     <AndroidResource Include="Resources\mipmap-anydpi-v26\icon.xml" />
     <AndroidResource Include="Resources\mipmap-anydpi-v26\icon_round.xml" />
     <AndroidResource Include="Resources\mipmap-hdpi\icon.png" />
