--- a/BW_Mobile/BW_Mobile.UWP/BW_Mobile.UWP.csproj
+++ b/BW_Mobile/BW_Mobile.UWP/BW_Mobile.UWP.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BW_Mobile.UWP</RootNamespace>
     <AssemblyName>黑白</AssemblyName>
-    <DefaultLanguage>zh-CN</DefaultLanguage>
+    <DefaultLanguage>zh-cn</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion>10.0.19041.0</TargetPlatformVersion>
     <TargetPlatformMinVersion>10.0.16299.0</TargetPlatformMinVersion>
