--- a/BW_Mobile/BW_Mobile/BW_Mobile.csproj
+++ b/BW_Mobile/BW_Mobile/BW_Mobile.csproj
@@ -5,7 +5,7 @@
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
     <Authors>LZH</Authors>
     <Company></Company>
-    <AssemblyVersion>1.3.13.0</AssemblyVersion>
+    <AssemblyVersion>1.3.14.0</AssemblyVersion>
     <NeutralLanguage>zh-CN</NeutralLanguage>
     <UserSecretsId>b6217d37-bd88-4de0-8e12-1e5fbc688e5a</UserSecretsId>
     <Version>$(VersionPrefix)</Version>
@@ -27,6 +27,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="CreditsPage.xaml.cs">
+      <DependentUpon>CreditsPage.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -44,7 +47,7 @@
     <EmbeddedResource Update="DebugPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="DevelopersPage.xaml">
+    <EmbeddedResource Update="CreditsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="GamePage.xaml">
