完成UWP应用程序标题本地化

--- a/BW_Mobile/BW_Mobile.UWP/BW_Mobile.UWP.csproj
+++ b/BW_Mobile/BW_Mobile.UWP/BW_Mobile.UWP.csproj
@@ -191,6 +191,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="BW_Mobile.UWP_TemporaryKey.pfx" />
+    <PRIResource Include="Strings\en\Resources.resw" />
+    <PRIResource Include="Strings\zh-CN\Resources.resw" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
