--- a/BlackWhite.App/BlackWhite.App.Android/Properties/AndroidManifest.xml
+++ b/BlackWhite.App/BlackWhite.App.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" package="cn.hplzh.blackwhite.app" android:versionCode="17" android:versionName="3.0.17">
 	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="31" />
-	<application android:label="BlackWhite.App.Android" android:theme="@style/MainTheme"></application>
+	<application android:label="BlackWhite.App.Android" android:theme="@style/MainTheme" android:icon="@mipmap/icon"></application>
 </manifest>
