--- a/BlackWhite.App/BlackWhite.App.Android/BlackWhite.App.Android.csproj
+++ b/BlackWhite.App/BlackWhite.App.Android/BlackWhite.App.Android.csproj
@@ -56,6 +56,7 @@
     <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
     <AndroidLinkMode>Full</AndroidLinkMode>
     <AndroidSupportedAbis>armeabi-v7a;x86;x86_64;arm64-v8a</AndroidSupportedAbis>
+    <MandroidI18n />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
