--- a/BlackWhite.App/BlackWhite.App/BlackWhite.App.csproj
+++ b/BlackWhite.App/BlackWhite.App/BlackWhite.App.csproj
@@ -53,10 +53,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="ButtonCardView.xaml">
+    <EmbeddedResource Update="Game\Select\ButtonCardView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="GamePage.xaml">
+    <EmbeddedResource Update="Game\Base\GamePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Properties\App.resx">
@@ -86,10 +86,10 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>VersionPage.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Update="SizePage.xaml">
+    <EmbeddedResource Update="Game\Select\SizePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="StartPage.xaml">
+    <EmbeddedResource Update="Game\Select\StartPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="StatisticsPage.xaml">
