添加自由模式

--- a/BlackWhite.App/BlackWhite.App/BlackWhite.App.csproj
+++ b/BlackWhite.App/BlackWhite.App/BlackWhite.App.csproj
@@ -20,6 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Game\Select\NumberSizePage.xaml.cs">
+      <DependentUpon>NumberSizePage.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Properties\App.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -57,6 +60,9 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Game\Base\GamePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Game\Select\NumberSizePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Properties\App.resx">
